<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/delete_image_index"
        android:icon="@android:drawable/ic_search_category_default"
        android:title="@string/delete_image_index" />
    <item android:id="@+id/refresh_image_index"
        android:icon="@android:drawable/ic_search_category_default"
        android:title="@string/create_image_index" />
    <item android:id="@+id/sort_by_date_added"
        android:icon="@android:drawable/ic_search_category_default"
        android:title="@string/sort_by_date_added" />
    <item android:id="@+id/sort_by_date_added_desc"
        android:icon="@android:drawable/ic_search_category_default"
        android:title="@string/sort_by_date_added_desc" />
    <item android:id="@+id/sort_by_norm"
        android:icon="@android:drawable/ic_search_category_default"
        android:title="@string/sort_by_norm" />
</menu>